--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,10 @@
         "symfony/yaml": "5.0.*"
     },
     "require-dev": {
+        "phpmd/phpmd": "^2.8",
+        "phpro/grumphp": "^0.17.2",
+        "phpstan/phpstan": "^0.12.8",
+        "squizlabs/php_codesniffer": "^3.5",
         "symfony/debug-pack": "*",
         "symfony/maker-bundle": "^1.0",
         "symfony/profiler-pack": "*",
