--- a/phpstan.neon
+++ b/phpstan.neon
@@ -3,3 +3,4 @@ parameters:
         - %rootDir%/../../../src/Migrations 
     excludes_analyse:
         - src/DataFixtures
+    inferPrivatePropertyTypeFromConstructor: true
