--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -36,3 +36,7 @@ security:
         - { path: ^/login$, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
+
+    role_hierarchy:
+        ROLE_LECTOR:       ROLE_USER
+        ROLE_ADMIN:       ROLE_LECTOR
