User can add documents saved in documents folder

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,7 @@ yarn-error.log
 ###> jetbrain/phpstorm ###
 /.idea/
 ###< jetbrain/phpstorm ###
+
+###> User files ###
+/public/documents/*
+###< User files ###
